2009-02-28  Perry McFarlane  <perry_m@fastmail.fm>
* /DOC/USAGE akey.h atari_sdl.c javanvm/atari_javanvm.c input.[ch]: Emulate CX85 numeric keypad


2009-02-25  Perry McFarlane  <perry_m@fastmail.fm>
  Commiting patch submitted by Krótki with my changes <kr0tki@poczta.onet.pl>
* atari.c atari_sdl.c atari_ntsc.[ch] configure.ac platform.h ui.c: NTSC
Filter option in the UI.

M ./DOC/USAGE +9
M ./src/akey.h +17
M ./src/atari_sdl.c +40
M ./src/input.c +66
M ./src/input.h +1

2009-02-05  Perry McFarlane  <perry_m@fastmail.fm>
  Commiting patch submitted by Krótki <kr0tki@poczta.onet.pl>
* atari_sdl.c: cleaned up display modes.


2009-01-11  Petr Stehlik <pstehlik@sophics.cz>
  Commiting patch submitted by Krótki <kr0tki@poczta.onet.pl>
* atari_sdl.c: -audio16 fixed
* pokeysnd.[ch]: Sound recording must stop when POKEY is reinitialised
* sndsave.c: Chunks in WAV format must be word-aligned,
             16-bit sound recording fixed.


2008-12-27  Petr Stehlik <pstehlik@sophics.cz>
  Commiting patch submitted by Krótki <kr0tki@poczta.onet.pl>
* atari.c: initialize color palette after loading saved state
* cfg.c, mzpokeysnd.c, pokeysnd.c, ui.c: serio_sound* -> POKEYSND_serio_sound*


2008-11-03  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac: fix syntax error


2008-10-30  Perry McFarlane  <perry_m@fastmail.fm>
* memory.c: 5200 GTIA c000-cfff and POKEY e800-efff mirrors.
* configure.ac: minor fix for Cygwin.


2008-10-29  Perry McFarlane  <perry_m@fastmail.fm>
* afile.[ch], atari.c, sio.c:  Support .pro images
* ui.c: replace ^R in source with \022
* pbi_bb.c, pbi_mio.c: correct Util_filenamenotset error.
* mzpokeysnd.c, pokey.c, pokey.h: rename SKCTLS -> SKCTL
* monitor.c: 5200 equates.
* DOC/BUGS: add Extract demo.
* Makefile.in: use NestedVM javasource and UnixRuntime by default
* monitor.c: SKCTL and SKSTAT in pokey state output.


2008-10-13  Matthias Reichl  <hias@horus.com>
* pokey.c: fixed the ALLPOT register - it didn't work